force-app/main/default/objects/reCaptcha__c/reCaptcha__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>reCaptcha</label>
</CustomObject>