force-app/main/default/objects/reCaptcha__c/fields/isReCaptchaEnabled__c.field-meta.xml
<CustomField>
    <fullName>isReCaptchaEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isReCaptchaEnabled</label>
    <type>Checkbox</type>
</CustomField>