force-app/main/default/objects/reCaptcha__c/fields/SecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecretKey__c</fullName>
    <label>Secret Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>