force-app/main/default/objects/reCaptcha__c/fields/SiteKey__c.field-meta.xml
<CustomField>
    <fullName>SiteKey__c</fullName>
    <label>Site Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>